<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="settings_text">Здесь будут настройки</string>
    <string name="about_text">О программе</string>
    <string name="settings">Настройки</string>
    <string name="main">Главная</string>
    <string name="about">О программе</string>
    <string name="user_login">login</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_add">Add</string>
    <string name="action_share">Share</string>
    <string name="action_add_a_link">Add link</string>
    <string name="action_clear">Clear</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="title">Заголовок</string>
    <string name="descr">Описание</string>
    <string name="attention">Внимание</string>
    <string name="confirm_delete">Удалить данные?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>