<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="20"
            android:title="@string/settings" />
        <item
            android:id="@+id/action_main"
            android:icon="@android:drawable/ic_menu_compass"
            android:orderInCategory="10"
            android:title="@string/main" />
        <item
            android:id="@+id/action_about"
            android:icon="@android:drawable/btn_star_big_on"
            android:orderInCategory="30"
            android:title="@string/about" />
    </group>
</menu>